# cix-gpu-dkms

./: .gitignore  BUILD.bazel  README.md  gpu.mk  paths.bzl
.github/workflows/: build.yml
config/: BUILD.bazel  cflags.bzl
config/fragment/: BUILD.bazel  midgard.fragment
config/fragment/platform/: sky1.fragment
debian/: changelog  cix-gpu-dkms.install  cix-gpu-dkms.lintian-overrides  control  copyright  gbp.conf  rules  watch
debian/patches/: 0001-fix-build-for-kernel-up-to-7.0-for-ubuntu.patch  series
debian/source/: options
drivers/base/arm/: BUILD.bazel  Makefile
drivers/gpu/arm/: BUILD.bazel
drivers/gpu/arm/midgard/: BUILD.bazel  Kbuild  Kconfig  Makefile  mali_kbase.h  mali_kbase_config_defaults.h  mali_kbase_core_linux.c  mali_kbase_defs.h  mali_kbase_dvfs_debugfs.c  mali_kbase_mem.c  mali_kbase_pbha.c
drivers/gpu/arm/midgard/backend/gpu/: mali_kbase_devfreq.c  mali_kbase_pm_ca.c  mali_kbase_pm_defs.h  mali_kbase_pm_driver.c  mali_kbase_pm_metrics.c  mali_kbase_pm_policy.c
drivers/gpu/arm/midgard/csf/: mali_kbase_csf.c  mali_kbase_csf_defs.h  mali_kbase_csf_firmware.c  mali_kbase_csf_protected_memory.c  mali_kbase_csf_scheduler.c
drivers/gpu/arm/midgard/csf/ipa_control/: mali_kbase_csf_ipa_control.c
drivers/gpu/arm/midgard/device/: mali_kbase_device.c
drivers/gpu/arm/midgard/hw_access/regmap/: mali_kbase_regmap_csf_enums.h  mali_kbase_regmap_csf_macros.h
drivers/gpu/arm/midgard/hwcnt/backend/: mali_kbase_hwcnt_backend_csf.c
drivers/gpu/arm/midgard/ipa/: mali_kbase_ipa.c  mali_kbase_ipa_simple.c
drivers/gpu/arm/midgard/platform/sky1/: Kbuild  mali_kbase_clk_rate_trace.c  mali_kbase_config_platform.h  mali_kbase_config_sky1.c  mali_kbase_dsm.c  mali_kbase_dsm.h  mali_kbase_runtime_pm.c
drivers/gpu/arm/midgard/tests/: BUILD.bazel  Kbuild
drivers/hwtracing/coresight/mali/: BUILD.bazel  Makefile
drivers/xen/arm/: Makefile
