# SPDX-License-Identifier: GPL-2.0 WITH Linux-syscall-note
#
# (C) COPYRIGHT 2025 ARM Limited. All rights reserved.
#
# This program is free software and is provided to you under the terms of the
# GNU General Public License version 2 as published by the Free Software
# Foundation, and any use by you of this program is subject to the terms
# of such GNU license.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, you can access it online at
# http://www.gnu.org/licenses/gpl-2.0.html.
#
#

load(
    "@kleaf//build/kernel/kleaf:kernel.bzl",
    "ddk_headers",
    "ddk_module",
)
load("//common-modules/cix/gpu_kernel/config:cflags.bzl", "CFLAGS_MODULE", "COPTS_KBASE")
load("//common-modules/cix/gpu_kernel:paths.bzl", "GPU_KERNEL_CONFIG", "GPU_KERNEL_CONFIG_FRAGMENT", "GPU_KERNEL_BASE", "GPU_KERNEL_DRIVERS_GPU_ARM", "GPU_KERNEL_DRIVERS_GPU_ARM_MIDGARD_TESTS")
load("@bazel_skylib//rules:common_settings.bzl", "string_flag")

package(
    default_visibility = [
        "//:__subpackages__",
        "@kleaf//common:__pkg__",
    ],
)

genrule(
    name = "remove_mali_kconfig_ext_prefix",
    srcs = ["Kconfig"],
    outs = ["post_process.kconfig"],
    cmd = "sed -e '/MALI_KCONFIG_EXT_PREFIX/d' $(location Kconfig) > $@",
    visibility = ["//visibility:public"],
)


ddk_headers(
    name = "kbase_kernel_headers",
    hdrs = [
        ":midgard_headers",
        GPU_KERNEL_BASE + ":kernel_headers",
        GPU_KERNEL_DRIVERS_GPU_ARM + ":mali_arbitration_shared_config_defaults",
        "@kleaf//common:all_headers",
    ],
    defconfigs = [GPU_KERNEL_CONFIG_FRAGMENT + ":kbase_defconfig"],
    kconfigs = [":midgard_kconfig"],
)

ddk_headers(
    name = "midgard_headers",
    hdrs = glob(["**/*.h"]),
    includes = [
        ".",
        "arbiter",
        "arbiter/backend",
        "backend/gpu",
        "context",
        "csf",
        "csf/ipa_control",
        "debug",
        "debug/backend",
        "device",
        "gpu",
        "hw_access",
        "hw_access/regmap",
        "hwcnt",
        "hwcnt/backend",
        "ipa",
        "ipa/backend",
        "mmu",
        "mmu/backend",
        "thirdparty",
        "tl",
    ] + select({
        "//conditions:default": ["platform/devicetree"],
        GPU_KERNEL_CONFIG + ":mali_platform_name_meson": ["platform/meson"],
        GPU_KERNEL_CONFIG + ":mali_platform_name_sky1": ["platform/sky1"],
        GPU_KERNEL_CONFIG + ":mali_platform_name_vexpress": ["platform/vexpress"],
        GPU_KERNEL_CONFIG + ":mali_platform_name_vexpress_1xv7_a57": ["platform/vexpress_1xv7_a57"],
        GPU_KERNEL_CONFIG + ":mali_platform_name_vexpress_6xvirtex7_10mhz": ["platform/vexpress_6xvirtex7_10mhz"],
    }),
)

filegroup(
    name = "midgard_kconfig",
    srcs = [
        "post_process.kconfig",
    ] + select({
        GPU_KERNEL_CONFIG + ":mali_debug_kutf": [GPU_KERNEL_DRIVERS_GPU_ARM_MIDGARD_TESTS + ":kutf_kconfig"],
        "//conditions:default": [],
    }),
)

ddk_module(
    name = "mali_kbase",
    srcs = glob(
               ["*.c"],
               exclude = [
                   "mali_kbase_pbha_debugfs.c",
                   "mali_kbase_fence_ops.c",
                   "mali_kbase_sync_file.c",
                   "mali_kbase_sync_common.c",
                   "mali_power_gpu_work_period_trace.c",
                   "mali_kbase_gpu_metrics.c",
                   "mali_kbase_moduleprops.c",
                   "mali_kbase_power_debugfs.c",
                   "mali_kbase_regs_dump_debugfs.c",
                   "mali_kbase_fpga_sysctl.c",
               ],
           ) + glob(
               [
                   "arbiter/*.c",
                   "arbiter/backend/*.c",
               ],
           ) + glob(
               ["backend/gpu/*.c"],
               exclude = [
                   "backend/gpu/mali_kbase_pm_always_on_demand.c",
                   "backend/gpu/mali_kbase_devfreq.c",
                   "backend/gpu/mali_kbase_model_linux.c",
                   "backend/gpu/mali_kbase_model_dummy.c",
               ],
           ) + glob(
               [
                   "context/*.c",
                   "context/backend/*.c",
               ],
           ) + glob(
               [
                   "csf/*.c",
                   "csf/ipa_control/*.c",
               ],
               exclude = [
                   "csf/mali_kbase_csf_firmware_no_mali.c",
                   "csf/mali_kbase_csf_fw_io_no_mali.c",
                   "csf/mali_kbase_csf_firmware.c",
                   "csf/mali_kbase_csf_fw_io.c",
                   "csf/mali_kbase_debug_csf_fault.c",
               ],
           ) + glob(
               [
                   "debug/*.c",
                   "debug/backend/*.c",
               ],
               exclude = [
                   "debug/backend/mali_kbase_debug_coresight_csf.c",
               ],
           ) + glob(
               [
                   "device/*.c",
                   "device/backend/*.c",
               ],
           ) + glob(
               [
                   "gpu/*.c",
                   "gpu/backend/*.c",
               ],
           ) + glob(
               [
                   "hw_access/*.c",
                   "hw_access/regmap/*.c",
               ],
           ) + glob(
               [
                   "hwcnt/*.c",
                   "hwcnt/backend/*.c",
               ],
           ) + glob(
               [
                   "mmu/*.c",
                   "mmu/backend/*.c",
               ],
           ) + glob(
               ["thirdparty/*.c"],
           ) + glob(
               [
                   "tl/*.c",
                   "tl/backend/*.c",
               ],
               exclude = [
                   "tl/mali_kbase_timeline_test.c",
               ],
           ) +
           select({
               "//conditions:default": glob(["platform/devicetree/*.c"]),
               GPU_KERNEL_CONFIG + ":mali_platform_name_meson": glob(["platform/meson/*.c"]),
               GPU_KERNEL_CONFIG + ":mali_platform_name_sky1": glob([
                   "platform/sky1/*.c",
               ], exclude = ["platform/sky1/mali_kbase_dsm.c"]),
               GPU_KERNEL_CONFIG + ":mali_platform_name_vexpress": glob(["platform/vexpress/*.c"]),
               GPU_KERNEL_CONFIG + ":mali_platform_name_vexpress_1xv7_a57": glob(["platform/vexpress_1xv7_a57/*.c"]),
               GPU_KERNEL_CONFIG + ":mali_platform_name_vexpress_6xvirtex7_10mhz": glob(["platform/vexpress_6xvirtex7_10mhz/*.c"]),
           }) +
           select({
               GPU_KERNEL_CONFIG + ":mali_coresight": ["debug/backend/mali_kbase_debug_coresight_csf.c"],
               "//conditions:default": [],
           }),
    out = "mali_kbase.ko",
    hdrs = [
        ":kbase_kernel_headers",
    ],
    conditional_srcs = {
        "CONFIG_DEBUG_FS": {
            True: [
                "mali_kbase_pbha_debugfs.c",
                "csf/mali_kbase_debug_csf_fault.c",
                "ipa/mali_kbase_ipa_debugfs.c",
            ],
        },
        "CONFIG_SYNC_FILE": {
            True: [
                "mali_kbase_fence_ops.c",
                "mali_kbase_sync_file.c",
                "mali_kbase_sync_common.c",
            ],
        },
        "CONFIG_MALI_TRACE_POWER_GPU_WORK_PERIOD": {
            True: [
                "mali_power_gpu_work_period_trace.c",
                "mali_kbase_gpu_metrics.c",
            ],
        },
        "CONFIG_MALI_NO_MALI": {
            True: [
                "backend/gpu/mali_kbase_model_linux.c",
                "backend/gpu/mali_kbase_model_dummy.c",
                "csf/mali_kbase_csf_firmware_no_mali.c",
                "csf/mali_kbase_csf_fw_io_no_mali.c",
            ],
            False: [
                "csf/mali_kbase_csf_firmware.c",
                "csf/mali_kbase_csf_fw_io.c",
            ],
        },
        "CONFIG_MALI_REAL_HW": {
            True: [
                "hw_access/backend/mali_kbase_hw_access_real_hw.c",
            ],
            False: [
                "hw_access/backend/mali_kbase_hw_access_model_linux.c",
            ],
        },
        "CONFIG_MALI_DEVFREQ": {
            True: [
                "backend/gpu/mali_kbase_devfreq.c",
                "ipa/mali_kbase_ipa_simple.c",
                "ipa/mali_kbase_ipa.c",
                "ipa/backend/mali_kbase_ipa_counter_csf.c",
                "ipa/backend/mali_kbase_ipa_counter_common_csf.c",
            ] + glob([
                "ipa/*.h",
                "ipa/backend/*.h",
            ]),
        },
        "CONFIG_PLAT_DSM_SYSEVENT": {
            True: [
                "platform/sky1/mali_kbase_dsm.c",
            ],
        },
    },
    copts = CFLAGS_MODULE + COPTS_KBASE,
    kernel_build = "//common:sky1",
)
